--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine Proposal</title>
+  <title>Valentine Proposal to my baby Sharleen</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 mt-5">
         <div class="proposal-card glass my-auto" style="height:300px;">
-          <h2 class="text-center mb-2">Hey babe,</h2>
+          <h2 class="text-center mb-2">Hi babygirl!</h2>
           <h2 class="text-center mb-4">Will you be my Valentine?</h2>
           <div class="d-grid gap-2">
             <button id="yesBtn" class="btn btn-danger" type="button">Yes</button>
